07-hermes-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demos.alcar.local
    http:
      paths:
      - backend:
          serviceName: hermes
          servicePort: 80
